remove support for old project space and old style lcms import, add options, better error handling